force-app/main/default/objects/BCElemento__c/BCElemento__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para registrar los elementos de seguridad</description>
    <label>Elemento</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Elemento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elementos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>