force-app/main/default/objects/BCElemento__c/fields/BCCaso__c.field-meta.xml
<CustomField>
    <fullName>BCCaso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Elementos (Caso)</relationshipLabel>
    <relationshipName>Elementos1</relationshipName>
    <type>Lookup</type>
</CustomField>