force-app/main/default/objects/BCElemento__c/fields/BCComentarios__c.field-meta.xml
<CustomField>
    <fullName>BCComentarios__c</fullName>
    <label>Comentarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>