force-app/main/default/objects/BCElemento__c/fields/BCCoordenadasgeoreferenciales__c.field-meta.xml
<CustomField>
    <fullName>BCCoordenadasgeoreferenciales__c</fullName>
    <label>Coordenadas georeferenciales</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>