force-app/main/default/objects/BCElemento__c/fields/BCElementodeseguridad__c.field-meta.xml
<CustomField>
    <fullName>BCElementodeseguridad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Elemento de seguridad</label>
    <referenceTo>BCElementodeseguridad__c</referenceTo>
    <relationshipLabel>Elementos</relationshipLabel>
    <relationshipName>Elementos</relationshipName>
    <type>Lookup</type>
</CustomField>