force-app/main/default/objects/BCElemento__c/fields/BCSolicitud__c.field-meta.xml
<CustomField>
    <fullName>BCSolicitud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitud</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Elementos</relationshipLabel>
    <relationshipName>Elementos</relationshipName>
    <type>Lookup</type>
</CustomField>