force-app/main/default/objects/BCElemento__c/fields/BCTipodeelemento__c.field-meta.xml
<CustomField>
    <fullName>BCTipodeelemento__c</fullName>
    <label>Tipo de elemento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BCElementoSeguridad</valueSetName>
    </valueSet>
</CustomField>