force-app/main/default/objects/BCElemento__c/fields/BCTipodesolicitud__c.field-meta.xml
<CustomField>
    <fullName>BCTipodesolicitud__c</fullName>
    <label>Tipo de solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRIMERA VEZ</fullName>
                <default>true</default>
                <label>PRIMERA VEZ</label>
            </value>
            <value>
                <fullName>REGULARIZACIÓN</fullName>
            </value>
            <value>
                <fullName>RENOVACIÓN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>